--- a/index.html
+++ b/index.html
@@ -2,9 +2,88 @@
 <!-- Главная страница -->
 <html lang="ru">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="./assets/css/main.css">
     </head>
-    <body>
+    <body class="page">
+        <header class="header">
+            <div class="container">
+                <h1 class="header__title">
+                    Reusable component library
+                </h1>
+            </div>
+        </header>
+        <main class="preview">
+            <div class="card">
+                <div class="card__top">
 
+                </div>
+                <div class="card__body">
+                    <h5 class="card__title">
+                        Tooltip
+                    </h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__top">
+
+                </div>
+                <div class="card__body">
+                    <h5 class="card__title">
+                        Custom form elements
+                    </h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__top">
+
+                </div>
+                <div class="card__body">
+                    <h5 class="card__title">
+                        Calendar
+                    </h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__top">
+
+                </div>
+                <div class="card__body">
+                    <h5 class="card__title">
+                        Modal dialog
+                    </h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__top">
+
+                </div>
+                <div class="card__body">
+                    <h5 class="card__title">
+                        Histogram
+                    </h5>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__top">
+
+                </div>
+                <div class="card__body">
+                    <h5 class="card__title">
+                        Avatar
+                    </h5>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <h2 class="footer__title">
+                    About
+                </h2>
+                <p class="footer__text">
+                    This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
