--- a/09-lection7/01-burger-menu/index.html
+++ b/09-lection7/01-burger-menu/index.html
@@ -11,21 +11,19 @@
     </head>
     <body>
         <button id="burger-menu-open" style="display: inline-flex; width: 32px; height: 32px; align-items: center; justify-content: center; padding: 0; border: 0; color:var(--grey-4); background: var(--white);">
-            <svg width="24px" height="24px">
-                <use xlink:href="../../assets/icon/sprite.svg#burger"></use>
-            </svg>
+            <div width="24px" height="24px">
+                <img src="../../assets/icon/burger.svg"/>
+            </div>
         </button>
         <div id="burger-menu" class="burger-menu">
             <div class="burger-menu__window">
                 <header class="burger-menu__header">
-                    <button id="burger-menu-close" class="burger-menu__close">
-                       <svg width="24px" height="24px" xmlns="http://www.w3.org/2000/svg">
-                           <use xlink:href="../../assets/icon/sprite.svg#x"></use>
-                       </svg>
-                    </button>
-                    <svg width="110px" height="32px" xmlns="http://www.w3.org/2000/svg">
-                        <use xlink:href="../../assets/icon/sprite.svg#Logo"></use>
-                    </svg>
+                    <div id="burger-menu-close" class="burger-menu__close">
+                       <img width="24px" height="24px" src="../../assets/icon/cross.svg"/>
+                    </div>
+                    <div>
+                        <img width="110px" height="32px" src="../../assets/icon/logo.svg"/>
+                    </div>
                 </header>
                 <main class="burger-menu__main">
                     <div class="burger-menu__toggler-container">
